sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:11: error: illegal start of simple expression
    if (getCouleurJoueur(mem,0)< getCouleurJoueur(mem,1)) {
    ^