sort.baseball.NaiveBaseball.scala.code
var mem = 0
var pos1 = 0
var pos2 = 0
override def run() {
  while(!estTrie) {
    mem=getTrouBase()+1
    while (getTrouBase()+1>4) {
      mem=mem%4
    }
    pos1 = getCouleurJoueur(mem,0)-
    if (getCouleurJoueur(mem,0)< getCouleurJoueur(mem,1)) {
      deplace(mem,1)
    }
  }
}